deploy/k8s-prod/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emplus-api
spec:
  type: ClusterIP
  selector:
    app: emplus-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
